<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity"
    tools:ignore="UselessParent,UseCompoundDrawables,ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:gravity="center|start"
        android:paddingLeft="15dp"
        android:paddingTop="13dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/colorTextGray"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_lin_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_dark_round"
        android:elevation="0dp"
        android:gravity="center">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/main_img_status"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="5dp"
            android:src="@mipmap/ic_warn"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/main_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/module_not_activated"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/module_version"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/main_text_release_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/bg_orange_round"
                    android:ellipsize="end"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="2dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fadingEdgeLength="10dp"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_dark_round"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title_features"
                    android:textColor="@color/colorTextGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/switch_tablet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feature_tablet"
                        android:textColor="@color/colorTextGray"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_tablet_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/colorTextGray"
                        android:trackTint="@color/colorTextGray" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorThemeBackground" />

                <LinearLayout
                    android:id="@+id/switch_recall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feature_recall"
                        android:textColor="@color/colorTextGray"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_recall_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/colorTextGray"
                        android:trackTint="@color/colorTextGray" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorThemeBackground" />

                <LinearLayout
                    android:id="@+id/switch_forward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feature_forward"
                        android:textColor="@color/colorTextGray"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_forward_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/colorTextGray"
                        android:trackTint="@color/colorTextGray" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorThemeBackground" />

                <LinearLayout
                    android:id="@+id/switch_badge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feature_badge"
                        android:textColor="@color/colorTextGray"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_badge_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/colorTextGray"
                        android:trackTint="@color/colorTextGray" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorThemeBackground" />

                <LinearLayout
                    android:id="@+id/switch_dark_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feature_dark_mode"
                        android:textColor="@color/colorTextGray"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_dark_mode_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/colorTextGray"
                        android:trackTint="@color/colorTextGray" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_dark_round"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title_cache"
                    android:textColor="@color/colorTextGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_clear_cache"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingVertical="12dp"
                    android:text="@string/btn_clear_cache"
                    android:textColor="#FF5252"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorThemeBackground" />

                <TextView
                    android:id="@+id/btn_reset_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingVertical="12dp"
                    android:text="@string/btn_reset_settings"
                    android:textColor="#FF9800"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_permotion_round"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:lineSpacingExtra="6dp"
                    android:maxLines="3"
                    android:text="@string/about_module"
                    android:textColor="@color/colorTextGray"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
